parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> code
Rule 1     code -> S ;
Rule 2     code -> S
Rule 3     code -> code S ;
Rule 4     S -> command
Rule 5     S -> sel_queries
Rule 6     command -> PROCEDURE str DO code END
Rule 7     command -> LOAD TABLE A FROM A
Rule 8     command -> CREATE TABLE A FROM A
Rule 9     command -> SAVE TABLE A AS A
Rule 10    command -> DISCARD TABLE A
Rule 11    command -> SHOW TABLE A
Rule 12    command -> CREATE TABLE A FROM sel_queries
Rule 13    command -> CREATE TABLE A FROM A JOIN J
Rule 14    command -> CALL str
Rule 15    command -> CREATE TABLE A ATTRIBUTES a_list
Rule 16    command -> INSERT a_list INTO A
Rule 17    sel_queries -> SELECT a_list FROM A lim
Rule 18    sel_queries -> SELECT a_list FROM A WHERE cond_list lim
Rule 19    A -> str
Rule 20    A -> nr
Rule 21    A -> string
Rule 22    E -> A comparator A
Rule 23    cond_list -> E
Rule 24    cond_list -> cond_list AND E
Rule 25    lim -> <empty>
Rule 26    lim -> LIMIT nr
Rule 27    a_list -> A
Rule 28    a_list -> a_list , A
Rule 29    J -> A USING ( A )

Terminals, with rules where they appear

(                    : 29
)                    : 29
,                    : 28
;                    : 1 3
AND                  : 24
AS                   : 9
ATTRIBUTES           : 15
CALL                 : 14
CREATE               : 8 12 13 15
DISCARD              : 10
DO                   : 6
END                  : 6
FROM                 : 7 8 12 13 17 18
INSERT               : 16
INTO                 : 16
JOIN                 : 13
LIMIT                : 26
LOAD                 : 7
PROCEDURE            : 6
SAVE                 : 9
SELECT               : 17 18
SHOW                 : 11
TABLE                : 7 8 9 10 11 12 13 15
USING                : 29
WHERE                : 18
comparator           : 22
error                : 
nr                   : 20 26
str                  : 6 14 19
string               : 21

Nonterminals, with rules where they appear

A                    : 7 7 8 8 9 9 10 11 12 13 13 15 16 17 18 22 22 27 28 29 29
E                    : 23 24
J                    : 13
S                    : 1 2 3
a_list               : 15 16 17 18 28
code                 : 3 6 0
command              : 4
cond_list            : 18 24
lim                  : 17 18
sel_queries          : 5 12

Parsing method: LALR

state 0

    (0) S' -> . code
    (1) code -> . S ;
    (2) code -> . S
    (3) code -> . code S ;
    (4) S -> . command
    (5) S -> . sel_queries
    (6) command -> . PROCEDURE str DO code END
    (7) command -> . LOAD TABLE A FROM A
    (8) command -> . CREATE TABLE A FROM A
    (9) command -> . SAVE TABLE A AS A
    (10) command -> . DISCARD TABLE A
    (11) command -> . SHOW TABLE A
    (12) command -> . CREATE TABLE A FROM sel_queries
    (13) command -> . CREATE TABLE A FROM A JOIN J
    (14) command -> . CALL str
    (15) command -> . CREATE TABLE A ATTRIBUTES a_list
    (16) command -> . INSERT a_list INTO A
    (17) sel_queries -> . SELECT a_list FROM A lim
    (18) sel_queries -> . SELECT a_list FROM A WHERE cond_list lim

    PROCEDURE       shift and go to state 5
    LOAD            shift and go to state 6
    CREATE          shift and go to state 7
    SAVE            shift and go to state 8
    DISCARD         shift and go to state 9
    SHOW            shift and go to state 10
    CALL            shift and go to state 11
    INSERT          shift and go to state 12
    SELECT          shift and go to state 13

    code                           shift and go to state 1
    S                              shift and go to state 2
    command                        shift and go to state 3
    sel_queries                    shift and go to state 4

state 1

    (0) S' -> code .
    (3) code -> code . S ;
    (4) S -> . command
    (5) S -> . sel_queries
    (6) command -> . PROCEDURE str DO code END
    (7) command -> . LOAD TABLE A FROM A
    (8) command -> . CREATE TABLE A FROM A
    (9) command -> . SAVE TABLE A AS A
    (10) command -> . DISCARD TABLE A
    (11) command -> . SHOW TABLE A
    (12) command -> . CREATE TABLE A FROM sel_queries
    (13) command -> . CREATE TABLE A FROM A JOIN J
    (14) command -> . CALL str
    (15) command -> . CREATE TABLE A ATTRIBUTES a_list
    (16) command -> . INSERT a_list INTO A
    (17) sel_queries -> . SELECT a_list FROM A lim
    (18) sel_queries -> . SELECT a_list FROM A WHERE cond_list lim

    PROCEDURE       shift and go to state 5
    LOAD            shift and go to state 6
    CREATE          shift and go to state 7
    SAVE            shift and go to state 8
    DISCARD         shift and go to state 9
    SHOW            shift and go to state 10
    CALL            shift and go to state 11
    INSERT          shift and go to state 12
    SELECT          shift and go to state 13

    S                              shift and go to state 14
    command                        shift and go to state 3
    sel_queries                    shift and go to state 4

state 2

    (1) code -> S . ;
    (2) code -> S .

    ;               shift and go to state 15
    PROCEDURE       reduce using rule 2 (code -> S .)
    LOAD            reduce using rule 2 (code -> S .)
    CREATE          reduce using rule 2 (code -> S .)
    SAVE            reduce using rule 2 (code -> S .)
    DISCARD         reduce using rule 2 (code -> S .)
    SHOW            reduce using rule 2 (code -> S .)
    CALL            reduce using rule 2 (code -> S .)
    INSERT          reduce using rule 2 (code -> S .)
    SELECT          reduce using rule 2 (code -> S .)
    $end            reduce using rule 2 (code -> S .)
    END             reduce using rule 2 (code -> S .)


state 3

    (4) S -> command .

    ;               reduce using rule 4 (S -> command .)
    PROCEDURE       reduce using rule 4 (S -> command .)
    LOAD            reduce using rule 4 (S -> command .)
    CREATE          reduce using rule 4 (S -> command .)
    SAVE            reduce using rule 4 (S -> command .)
    DISCARD         reduce using rule 4 (S -> command .)
    SHOW            reduce using rule 4 (S -> command .)
    CALL            reduce using rule 4 (S -> command .)
    INSERT          reduce using rule 4 (S -> command .)
    SELECT          reduce using rule 4 (S -> command .)
    $end            reduce using rule 4 (S -> command .)
    END             reduce using rule 4 (S -> command .)


state 4

    (5) S -> sel_queries .

    ;               reduce using rule 5 (S -> sel_queries .)
    PROCEDURE       reduce using rule 5 (S -> sel_queries .)
    LOAD            reduce using rule 5 (S -> sel_queries .)
    CREATE          reduce using rule 5 (S -> sel_queries .)
    SAVE            reduce using rule 5 (S -> sel_queries .)
    DISCARD         reduce using rule 5 (S -> sel_queries .)
    SHOW            reduce using rule 5 (S -> sel_queries .)
    CALL            reduce using rule 5 (S -> sel_queries .)
    INSERT          reduce using rule 5 (S -> sel_queries .)
    SELECT          reduce using rule 5 (S -> sel_queries .)
    $end            reduce using rule 5 (S -> sel_queries .)
    END             reduce using rule 5 (S -> sel_queries .)


state 5

    (6) command -> PROCEDURE . str DO code END

    str             shift and go to state 16


state 6

    (7) command -> LOAD . TABLE A FROM A

    TABLE           shift and go to state 17


state 7

    (8) command -> CREATE . TABLE A FROM A
    (12) command -> CREATE . TABLE A FROM sel_queries
    (13) command -> CREATE . TABLE A FROM A JOIN J
    (15) command -> CREATE . TABLE A ATTRIBUTES a_list

    TABLE           shift and go to state 18


state 8

    (9) command -> SAVE . TABLE A AS A

    TABLE           shift and go to state 19


state 9

    (10) command -> DISCARD . TABLE A

    TABLE           shift and go to state 20


state 10

    (11) command -> SHOW . TABLE A

    TABLE           shift and go to state 21


state 11

    (14) command -> CALL . str

    str             shift and go to state 22


state 12

    (16) command -> INSERT . a_list INTO A
    (27) a_list -> . A
    (28) a_list -> . a_list , A
    (19) A -> . str
    (20) A -> . nr
    (21) A -> . string

    str             shift and go to state 25
    nr              shift and go to state 26
    string          shift and go to state 27

    a_list                         shift and go to state 23
    A                              shift and go to state 24

state 13

    (17) sel_queries -> SELECT . a_list FROM A lim
    (18) sel_queries -> SELECT . a_list FROM A WHERE cond_list lim
    (27) a_list -> . A
    (28) a_list -> . a_list , A
    (19) A -> . str
    (20) A -> . nr
    (21) A -> . string

    str             shift and go to state 25
    nr              shift and go to state 26
    string          shift and go to state 27

    a_list                         shift and go to state 28
    A                              shift and go to state 24

state 14

    (3) code -> code S . ;

    ;               shift and go to state 29


state 15

    (1) code -> S ; .

    PROCEDURE       reduce using rule 1 (code -> S ; .)
    LOAD            reduce using rule 1 (code -> S ; .)
    CREATE          reduce using rule 1 (code -> S ; .)
    SAVE            reduce using rule 1 (code -> S ; .)
    DISCARD         reduce using rule 1 (code -> S ; .)
    SHOW            reduce using rule 1 (code -> S ; .)
    CALL            reduce using rule 1 (code -> S ; .)
    INSERT          reduce using rule 1 (code -> S ; .)
    SELECT          reduce using rule 1 (code -> S ; .)
    $end            reduce using rule 1 (code -> S ; .)
    END             reduce using rule 1 (code -> S ; .)


state 16

    (6) command -> PROCEDURE str . DO code END

    DO              shift and go to state 30


state 17

    (7) command -> LOAD TABLE . A FROM A
    (19) A -> . str
    (20) A -> . nr
    (21) A -> . string

    str             shift and go to state 25
    nr              shift and go to state 26
    string          shift and go to state 27

    A                              shift and go to state 31

state 18

    (8) command -> CREATE TABLE . A FROM A
    (12) command -> CREATE TABLE . A FROM sel_queries
    (13) command -> CREATE TABLE . A FROM A JOIN J
    (15) command -> CREATE TABLE . A ATTRIBUTES a_list
    (19) A -> . str
    (20) A -> . nr
    (21) A -> . string

    str             shift and go to state 25
    nr              shift and go to state 26
    string          shift and go to state 27

    A                              shift and go to state 32

state 19

    (9) command -> SAVE TABLE . A AS A
    (19) A -> . str
    (20) A -> . nr
    (21) A -> . string

    str             shift and go to state 25
    nr              shift and go to state 26
    string          shift and go to state 27

    A                              shift and go to state 33

state 20

    (10) command -> DISCARD TABLE . A
    (19) A -> . str
    (20) A -> . nr
    (21) A -> . string

    str             shift and go to state 25
    nr              shift and go to state 26
    string          shift and go to state 27

    A                              shift and go to state 34

state 21

    (11) command -> SHOW TABLE . A
    (19) A -> . str
    (20) A -> . nr
    (21) A -> . string

    str             shift and go to state 25
    nr              shift and go to state 26
    string          shift and go to state 27

    A                              shift and go to state 35

state 22

    (14) command -> CALL str .

    ;               reduce using rule 14 (command -> CALL str .)
    PROCEDURE       reduce using rule 14 (command -> CALL str .)
    LOAD            reduce using rule 14 (command -> CALL str .)
    CREATE          reduce using rule 14 (command -> CALL str .)
    SAVE            reduce using rule 14 (command -> CALL str .)
    DISCARD         reduce using rule 14 (command -> CALL str .)
    SHOW            reduce using rule 14 (command -> CALL str .)
    CALL            reduce using rule 14 (command -> CALL str .)
    INSERT          reduce using rule 14 (command -> CALL str .)
    SELECT          reduce using rule 14 (command -> CALL str .)
    $end            reduce using rule 14 (command -> CALL str .)
    END             reduce using rule 14 (command -> CALL str .)


state 23

    (16) command -> INSERT a_list . INTO A
    (28) a_list -> a_list . , A

    INTO            shift and go to state 36
    ,               shift and go to state 37


state 24

    (27) a_list -> A .

    INTO            reduce using rule 27 (a_list -> A .)
    ,               reduce using rule 27 (a_list -> A .)
    FROM            reduce using rule 27 (a_list -> A .)
    ;               reduce using rule 27 (a_list -> A .)
    PROCEDURE       reduce using rule 27 (a_list -> A .)
    LOAD            reduce using rule 27 (a_list -> A .)
    CREATE          reduce using rule 27 (a_list -> A .)
    SAVE            reduce using rule 27 (a_list -> A .)
    DISCARD         reduce using rule 27 (a_list -> A .)
    SHOW            reduce using rule 27 (a_list -> A .)
    CALL            reduce using rule 27 (a_list -> A .)
    INSERT          reduce using rule 27 (a_list -> A .)
    SELECT          reduce using rule 27 (a_list -> A .)
    $end            reduce using rule 27 (a_list -> A .)
    END             reduce using rule 27 (a_list -> A .)


state 25

    (19) A -> str .

    INTO            reduce using rule 19 (A -> str .)
    ,               reduce using rule 19 (A -> str .)
    FROM            reduce using rule 19 (A -> str .)
    ATTRIBUTES      reduce using rule 19 (A -> str .)
    AS              reduce using rule 19 (A -> str .)
    ;               reduce using rule 19 (A -> str .)
    PROCEDURE       reduce using rule 19 (A -> str .)
    LOAD            reduce using rule 19 (A -> str .)
    CREATE          reduce using rule 19 (A -> str .)
    SAVE            reduce using rule 19 (A -> str .)
    DISCARD         reduce using rule 19 (A -> str .)
    SHOW            reduce using rule 19 (A -> str .)
    CALL            reduce using rule 19 (A -> str .)
    INSERT          reduce using rule 19 (A -> str .)
    SELECT          reduce using rule 19 (A -> str .)
    $end            reduce using rule 19 (A -> str .)
    END             reduce using rule 19 (A -> str .)
    WHERE           reduce using rule 19 (A -> str .)
    LIMIT           reduce using rule 19 (A -> str .)
    JOIN            reduce using rule 19 (A -> str .)
    comparator      reduce using rule 19 (A -> str .)
    USING           reduce using rule 19 (A -> str .)
    AND             reduce using rule 19 (A -> str .)
    )               reduce using rule 19 (A -> str .)


state 26

    (20) A -> nr .

    INTO            reduce using rule 20 (A -> nr .)
    ,               reduce using rule 20 (A -> nr .)
    FROM            reduce using rule 20 (A -> nr .)
    ATTRIBUTES      reduce using rule 20 (A -> nr .)
    AS              reduce using rule 20 (A -> nr .)
    ;               reduce using rule 20 (A -> nr .)
    PROCEDURE       reduce using rule 20 (A -> nr .)
    LOAD            reduce using rule 20 (A -> nr .)
    CREATE          reduce using rule 20 (A -> nr .)
    SAVE            reduce using rule 20 (A -> nr .)
    DISCARD         reduce using rule 20 (A -> nr .)
    SHOW            reduce using rule 20 (A -> nr .)
    CALL            reduce using rule 20 (A -> nr .)
    INSERT          reduce using rule 20 (A -> nr .)
    SELECT          reduce using rule 20 (A -> nr .)
    $end            reduce using rule 20 (A -> nr .)
    END             reduce using rule 20 (A -> nr .)
    WHERE           reduce using rule 20 (A -> nr .)
    LIMIT           reduce using rule 20 (A -> nr .)
    JOIN            reduce using rule 20 (A -> nr .)
    comparator      reduce using rule 20 (A -> nr .)
    USING           reduce using rule 20 (A -> nr .)
    AND             reduce using rule 20 (A -> nr .)
    )               reduce using rule 20 (A -> nr .)


state 27

    (21) A -> string .

    INTO            reduce using rule 21 (A -> string .)
    ,               reduce using rule 21 (A -> string .)
    FROM            reduce using rule 21 (A -> string .)
    ATTRIBUTES      reduce using rule 21 (A -> string .)
    AS              reduce using rule 21 (A -> string .)
    ;               reduce using rule 21 (A -> string .)
    PROCEDURE       reduce using rule 21 (A -> string .)
    LOAD            reduce using rule 21 (A -> string .)
    CREATE          reduce using rule 21 (A -> string .)
    SAVE            reduce using rule 21 (A -> string .)
    DISCARD         reduce using rule 21 (A -> string .)
    SHOW            reduce using rule 21 (A -> string .)
    CALL            reduce using rule 21 (A -> string .)
    INSERT          reduce using rule 21 (A -> string .)
    SELECT          reduce using rule 21 (A -> string .)
    $end            reduce using rule 21 (A -> string .)
    END             reduce using rule 21 (A -> string .)
    WHERE           reduce using rule 21 (A -> string .)
    LIMIT           reduce using rule 21 (A -> string .)
    JOIN            reduce using rule 21 (A -> string .)
    comparator      reduce using rule 21 (A -> string .)
    USING           reduce using rule 21 (A -> string .)
    AND             reduce using rule 21 (A -> string .)
    )               reduce using rule 21 (A -> string .)


state 28

    (17) sel_queries -> SELECT a_list . FROM A lim
    (18) sel_queries -> SELECT a_list . FROM A WHERE cond_list lim
    (28) a_list -> a_list . , A

    FROM            shift and go to state 38
    ,               shift and go to state 37


state 29

    (3) code -> code S ; .

    PROCEDURE       reduce using rule 3 (code -> code S ; .)
    LOAD            reduce using rule 3 (code -> code S ; .)
    CREATE          reduce using rule 3 (code -> code S ; .)
    SAVE            reduce using rule 3 (code -> code S ; .)
    DISCARD         reduce using rule 3 (code -> code S ; .)
    SHOW            reduce using rule 3 (code -> code S ; .)
    CALL            reduce using rule 3 (code -> code S ; .)
    INSERT          reduce using rule 3 (code -> code S ; .)
    SELECT          reduce using rule 3 (code -> code S ; .)
    $end            reduce using rule 3 (code -> code S ; .)
    END             reduce using rule 3 (code -> code S ; .)


state 30

    (6) command -> PROCEDURE str DO . code END
    (1) code -> . S ;
    (2) code -> . S
    (3) code -> . code S ;
    (4) S -> . command
    (5) S -> . sel_queries
    (6) command -> . PROCEDURE str DO code END
    (7) command -> . LOAD TABLE A FROM A
    (8) command -> . CREATE TABLE A FROM A
    (9) command -> . SAVE TABLE A AS A
    (10) command -> . DISCARD TABLE A
    (11) command -> . SHOW TABLE A
    (12) command -> . CREATE TABLE A FROM sel_queries
    (13) command -> . CREATE TABLE A FROM A JOIN J
    (14) command -> . CALL str
    (15) command -> . CREATE TABLE A ATTRIBUTES a_list
    (16) command -> . INSERT a_list INTO A
    (17) sel_queries -> . SELECT a_list FROM A lim
    (18) sel_queries -> . SELECT a_list FROM A WHERE cond_list lim

    PROCEDURE       shift and go to state 5
    LOAD            shift and go to state 6
    CREATE          shift and go to state 7
    SAVE            shift and go to state 8
    DISCARD         shift and go to state 9
    SHOW            shift and go to state 10
    CALL            shift and go to state 11
    INSERT          shift and go to state 12
    SELECT          shift and go to state 13

    code                           shift and go to state 39
    S                              shift and go to state 2
    command                        shift and go to state 3
    sel_queries                    shift and go to state 4

state 31

    (7) command -> LOAD TABLE A . FROM A

    FROM            shift and go to state 40


state 32

    (8) command -> CREATE TABLE A . FROM A
    (12) command -> CREATE TABLE A . FROM sel_queries
    (13) command -> CREATE TABLE A . FROM A JOIN J
    (15) command -> CREATE TABLE A . ATTRIBUTES a_list

    FROM            shift and go to state 41
    ATTRIBUTES      shift and go to state 42


state 33

    (9) command -> SAVE TABLE A . AS A

    AS              shift and go to state 43


state 34

    (10) command -> DISCARD TABLE A .

    ;               reduce using rule 10 (command -> DISCARD TABLE A .)
    PROCEDURE       reduce using rule 10 (command -> DISCARD TABLE A .)
    LOAD            reduce using rule 10 (command -> DISCARD TABLE A .)
    CREATE          reduce using rule 10 (command -> DISCARD TABLE A .)
    SAVE            reduce using rule 10 (command -> DISCARD TABLE A .)
    DISCARD         reduce using rule 10 (command -> DISCARD TABLE A .)
    SHOW            reduce using rule 10 (command -> DISCARD TABLE A .)
    CALL            reduce using rule 10 (command -> DISCARD TABLE A .)
    INSERT          reduce using rule 10 (command -> DISCARD TABLE A .)
    SELECT          reduce using rule 10 (command -> DISCARD TABLE A .)
    $end            reduce using rule 10 (command -> DISCARD TABLE A .)
    END             reduce using rule 10 (command -> DISCARD TABLE A .)


state 35

    (11) command -> SHOW TABLE A .

    ;               reduce using rule 11 (command -> SHOW TABLE A .)
    PROCEDURE       reduce using rule 11 (command -> SHOW TABLE A .)
    LOAD            reduce using rule 11 (command -> SHOW TABLE A .)
    CREATE          reduce using rule 11 (command -> SHOW TABLE A .)
    SAVE            reduce using rule 11 (command -> SHOW TABLE A .)
    DISCARD         reduce using rule 11 (command -> SHOW TABLE A .)
    SHOW            reduce using rule 11 (command -> SHOW TABLE A .)
    CALL            reduce using rule 11 (command -> SHOW TABLE A .)
    INSERT          reduce using rule 11 (command -> SHOW TABLE A .)
    SELECT          reduce using rule 11 (command -> SHOW TABLE A .)
    $end            reduce using rule 11 (command -> SHOW TABLE A .)
    END             reduce using rule 11 (command -> SHOW TABLE A .)


state 36

    (16) command -> INSERT a_list INTO . A
    (19) A -> . str
    (20) A -> . nr
    (21) A -> . string

    str             shift and go to state 25
    nr              shift and go to state 26
    string          shift and go to state 27

    A                              shift and go to state 44

state 37

    (28) a_list -> a_list , . A
    (19) A -> . str
    (20) A -> . nr
    (21) A -> . string

    str             shift and go to state 25
    nr              shift and go to state 26
    string          shift and go to state 27

    A                              shift and go to state 45

state 38

    (17) sel_queries -> SELECT a_list FROM . A lim
    (18) sel_queries -> SELECT a_list FROM . A WHERE cond_list lim
    (19) A -> . str
    (20) A -> . nr
    (21) A -> . string

    str             shift and go to state 25
    nr              shift and go to state 26
    string          shift and go to state 27

    A                              shift and go to state 46

state 39

    (6) command -> PROCEDURE str DO code . END
    (3) code -> code . S ;
    (4) S -> . command
    (5) S -> . sel_queries
    (6) command -> . PROCEDURE str DO code END
    (7) command -> . LOAD TABLE A FROM A
    (8) command -> . CREATE TABLE A FROM A
    (9) command -> . SAVE TABLE A AS A
    (10) command -> . DISCARD TABLE A
    (11) command -> . SHOW TABLE A
    (12) command -> . CREATE TABLE A FROM sel_queries
    (13) command -> . CREATE TABLE A FROM A JOIN J
    (14) command -> . CALL str
    (15) command -> . CREATE TABLE A ATTRIBUTES a_list
    (16) command -> . INSERT a_list INTO A
    (17) sel_queries -> . SELECT a_list FROM A lim
    (18) sel_queries -> . SELECT a_list FROM A WHERE cond_list lim

    END             shift and go to state 47
    PROCEDURE       shift and go to state 5
    LOAD            shift and go to state 6
    CREATE          shift and go to state 7
    SAVE            shift and go to state 8
    DISCARD         shift and go to state 9
    SHOW            shift and go to state 10
    CALL            shift and go to state 11
    INSERT          shift and go to state 12
    SELECT          shift and go to state 13

    S                              shift and go to state 14
    command                        shift and go to state 3
    sel_queries                    shift and go to state 4

state 40

    (7) command -> LOAD TABLE A FROM . A
    (19) A -> . str
    (20) A -> . nr
    (21) A -> . string

    str             shift and go to state 25
    nr              shift and go to state 26
    string          shift and go to state 27

    A                              shift and go to state 48

state 41

    (8) command -> CREATE TABLE A FROM . A
    (12) command -> CREATE TABLE A FROM . sel_queries
    (13) command -> CREATE TABLE A FROM . A JOIN J
    (19) A -> . str
    (20) A -> . nr
    (21) A -> . string
    (17) sel_queries -> . SELECT a_list FROM A lim
    (18) sel_queries -> . SELECT a_list FROM A WHERE cond_list lim

    str             shift and go to state 25
    nr              shift and go to state 26
    string          shift and go to state 27
    SELECT          shift and go to state 13

    A                              shift and go to state 49
    sel_queries                    shift and go to state 50

state 42

    (15) command -> CREATE TABLE A ATTRIBUTES . a_list
    (27) a_list -> . A
    (28) a_list -> . a_list , A
    (19) A -> . str
    (20) A -> . nr
    (21) A -> . string

    str             shift and go to state 25
    nr              shift and go to state 26
    string          shift and go to state 27

    A                              shift and go to state 24
    a_list                         shift and go to state 51

state 43

    (9) command -> SAVE TABLE A AS . A
    (19) A -> . str
    (20) A -> . nr
    (21) A -> . string

    str             shift and go to state 25
    nr              shift and go to state 26
    string          shift and go to state 27

    A                              shift and go to state 52

state 44

    (16) command -> INSERT a_list INTO A .

    ;               reduce using rule 16 (command -> INSERT a_list INTO A .)
    PROCEDURE       reduce using rule 16 (command -> INSERT a_list INTO A .)
    LOAD            reduce using rule 16 (command -> INSERT a_list INTO A .)
    CREATE          reduce using rule 16 (command -> INSERT a_list INTO A .)
    SAVE            reduce using rule 16 (command -> INSERT a_list INTO A .)
    DISCARD         reduce using rule 16 (command -> INSERT a_list INTO A .)
    SHOW            reduce using rule 16 (command -> INSERT a_list INTO A .)
    CALL            reduce using rule 16 (command -> INSERT a_list INTO A .)
    INSERT          reduce using rule 16 (command -> INSERT a_list INTO A .)
    SELECT          reduce using rule 16 (command -> INSERT a_list INTO A .)
    $end            reduce using rule 16 (command -> INSERT a_list INTO A .)
    END             reduce using rule 16 (command -> INSERT a_list INTO A .)


state 45

    (28) a_list -> a_list , A .

    INTO            reduce using rule 28 (a_list -> a_list , A .)
    ,               reduce using rule 28 (a_list -> a_list , A .)
    FROM            reduce using rule 28 (a_list -> a_list , A .)
    ;               reduce using rule 28 (a_list -> a_list , A .)
    PROCEDURE       reduce using rule 28 (a_list -> a_list , A .)
    LOAD            reduce using rule 28 (a_list -> a_list , A .)
    CREATE          reduce using rule 28 (a_list -> a_list , A .)
    SAVE            reduce using rule 28 (a_list -> a_list , A .)
    DISCARD         reduce using rule 28 (a_list -> a_list , A .)
    SHOW            reduce using rule 28 (a_list -> a_list , A .)
    CALL            reduce using rule 28 (a_list -> a_list , A .)
    INSERT          reduce using rule 28 (a_list -> a_list , A .)
    SELECT          reduce using rule 28 (a_list -> a_list , A .)
    $end            reduce using rule 28 (a_list -> a_list , A .)
    END             reduce using rule 28 (a_list -> a_list , A .)


state 46

    (17) sel_queries -> SELECT a_list FROM A . lim
    (18) sel_queries -> SELECT a_list FROM A . WHERE cond_list lim
    (25) lim -> .
    (26) lim -> . LIMIT nr

    WHERE           shift and go to state 54
    ;               reduce using rule 25 (lim -> .)
    PROCEDURE       reduce using rule 25 (lim -> .)
    LOAD            reduce using rule 25 (lim -> .)
    CREATE          reduce using rule 25 (lim -> .)
    SAVE            reduce using rule 25 (lim -> .)
    DISCARD         reduce using rule 25 (lim -> .)
    SHOW            reduce using rule 25 (lim -> .)
    CALL            reduce using rule 25 (lim -> .)
    INSERT          reduce using rule 25 (lim -> .)
    SELECT          reduce using rule 25 (lim -> .)
    $end            reduce using rule 25 (lim -> .)
    END             reduce using rule 25 (lim -> .)
    LIMIT           shift and go to state 55

    lim                            shift and go to state 53

state 47

    (6) command -> PROCEDURE str DO code END .

    ;               reduce using rule 6 (command -> PROCEDURE str DO code END .)
    PROCEDURE       reduce using rule 6 (command -> PROCEDURE str DO code END .)
    LOAD            reduce using rule 6 (command -> PROCEDURE str DO code END .)
    CREATE          reduce using rule 6 (command -> PROCEDURE str DO code END .)
    SAVE            reduce using rule 6 (command -> PROCEDURE str DO code END .)
    DISCARD         reduce using rule 6 (command -> PROCEDURE str DO code END .)
    SHOW            reduce using rule 6 (command -> PROCEDURE str DO code END .)
    CALL            reduce using rule 6 (command -> PROCEDURE str DO code END .)
    INSERT          reduce using rule 6 (command -> PROCEDURE str DO code END .)
    SELECT          reduce using rule 6 (command -> PROCEDURE str DO code END .)
    $end            reduce using rule 6 (command -> PROCEDURE str DO code END .)
    END             reduce using rule 6 (command -> PROCEDURE str DO code END .)


state 48

    (7) command -> LOAD TABLE A FROM A .

    ;               reduce using rule 7 (command -> LOAD TABLE A FROM A .)
    PROCEDURE       reduce using rule 7 (command -> LOAD TABLE A FROM A .)
    LOAD            reduce using rule 7 (command -> LOAD TABLE A FROM A .)
    CREATE          reduce using rule 7 (command -> LOAD TABLE A FROM A .)
    SAVE            reduce using rule 7 (command -> LOAD TABLE A FROM A .)
    DISCARD         reduce using rule 7 (command -> LOAD TABLE A FROM A .)
    SHOW            reduce using rule 7 (command -> LOAD TABLE A FROM A .)
    CALL            reduce using rule 7 (command -> LOAD TABLE A FROM A .)
    INSERT          reduce using rule 7 (command -> LOAD TABLE A FROM A .)
    SELECT          reduce using rule 7 (command -> LOAD TABLE A FROM A .)
    $end            reduce using rule 7 (command -> LOAD TABLE A FROM A .)
    END             reduce using rule 7 (command -> LOAD TABLE A FROM A .)


state 49

    (8) command -> CREATE TABLE A FROM A .
